<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- App Names -->
    <string name="app_name">Quizio</string>
    <string name="app_head">Quizio</string>
    <string name="add_ques_entering">Enter Question</string>
    <string name="add_ques_option1">Option 1</string>
    <string name="add_ques_option2">Option 2</string>

    <string name="add_ques_option3">Option 3</string>

    <string name="add_ques_option4">Option 4</string>
    <string name="add_ques">Add Question</string>


    <!-- Home / Second Page -->
    <string name="second_head">Choose an Option</string>

    <!-- Settings Page -->
    <string name="settings_head">Settings</string>
    <string name="quiz_management">Quiz Management</string>
    <string name="add_question">Add Question</string>
    <string name="reset_score">Reset Score</string>
    <string name="preferences">Preferences</string>
    <string name="sound_txt">Sound</string>
    <string name="dark_mode_txt">Dark Mode</string>
    <string name="back_txt">Back</string>

    <!-- Common Texts -->
    <string name="play_txt">Play</string>
    <string name="setting_txt">Settings</string>
    <string name="exit_txt">Exit</string>
    <string name="about_quizify">About Quizio</string>

    <!-- Category List -->
    <string-array name="categories_array">
        <item>General Knowledge</item>
        <item>Science</item>
        <item>Sports</item>
        <item>Technology</item>
    </string-array>
</resources>
