<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/secondPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="130dp"
    android:gravity="center"
    android:padding="24dp">

    <!-- Headline TextView -->
    <TextView
        android:id="@+id/headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_head"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/primary_color"
        android:layout_marginBottom="40dp"
        android:fontFamily="sans-serif-medium" />

    <!-- Buttons -->
    <!--    play button-->
    <Button
        android:id="@+id/buttonPlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_color"
        android:text="@string/play_txt"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:padding="16dp" />

    <Button
        android:id="@+id/buttonSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_color"
        android:text="@string/setting_txt"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:padding="16dp" />

    <Button
        android:id="@+id/buttonExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_color"
        android:text="@string/exit_txt"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        android:padding="16dp" />

</LinearLayout>